--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
   "name": "ai_image_generator",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "AI Image Generator with MERN Stack",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@huggingface/inference": "^4.7.1",
-    "axios": "^1.11.0",
-    "bcryptjs": "^3.0.2",
-    "connect-flash": "^0.1.1",
-    "dotenv": "^17.2.1",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.18.2",
-    "mongoose": "^8.17.1",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.3.0",
+    "config": "^3.3.7",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.4"
+    "nodemon": "^2.0.19"
   }
 }
