--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.3.0",
     "config": "^3.3.7",
+    "ejs": "^3.1.9",
     "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1",
     "mongoose": "^6.4.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
