--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.4.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
