--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.3.0",
     "config": "^3.3.7",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
