--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^7.3.0",
     "config": "^3.3.7",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
