--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "concurrently": "^7.3.0",
-    "config": "^3.3.7",
     "connect-flash": "^0.1.1",
+    "config": "^3.3.7",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
@@ -23,6 +22,7 @@
     "mongoose": "^6.4.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
