--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+	  "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "config": "^3.3.7",
